# P1-Solution

./: .gitignore  CMakeLists.txt  README.md
data/: flights.csv  test_routes.csv  train.csv  trainroutes.csv
src/: CMakeLists.txt  dataHandling.c  dataHandling.h  general.c  general.h  journey.c  journey.h  main.c  main.h  terminal.c  terminal.h  trainroutes.csv
test/: CMakeLists.txt  tests.c
